# fxtd

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yml
src/: bot.rs  config.rs  error.rs  lib.rs  main.rs
