[package]
name = "fxtd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
env_logger = "0.10.1"
log = "0.4.20"
regex = "1.10.2"
serde = "1.0.192"
serde_yaml = "0.9.27"
serenity = { version = "0.11.7", default-features=false, features=["client", "gateway", "rustls_backend", "model"] }
thiserror = "1.0.50"
tia = "1.0.3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
